src/test/testData/mtl/AnnotatorTestData.mtl
newmtl <warning descr="Material “Marble” is never used">Marble</warning>

Ka 0.5 0.5 0.5
Kd 0.9 0.9 0.9
Ks 1 1 1
Tf 0 0 0
illum 2
d 0.6600
Ns 32
sharpness 60
Ni 1.19713

map_Ka <error descr="The texture file is not found">marble_ambient.jpg</error>
